...
                    if viewModel.showAddButton {
                        Button(action: {
                            path.append("Search")
                        }) {
                            Image(systemName: "plus")
                            Text("Add Country")
                        }.accessibilityIdentifier("addCountryButton")
                        .foregroundColor(Color(hex: Theme.Colors.colorFFFFFF))
                            .padding(Theme.Sizes.pt4).hexBackground(Theme.Colors.color000000, cornerRadius: Theme.Sizes.pt8)
                    }
                }
                ScrollView {
                    if viewModel.countryEntityList.isEmpty {
...
